penambahan animasi pada profil

--- a/profil-AnggitaSalsaSaptaA.html
+++ b/profil-AnggitaSalsaSaptaA.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Anggita Salsa Sapta A. - MyDev Tani Berkah</title>
     <link rel="stylesheet" href="profil.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
-    <header>
+    <header class="animate__animated animate__fadeInDown">
         <nav>
             <a href="index.html#unit_kerja">Kembali ke Beranda</a>
         </nav>
@@ -15,31 +19,31 @@
 
     <main class="profil-container">
         <section class="profil-header">
-            <h1>Profile</h1>
-            <p>I'm a creative webdeveloper</p>
+            <h1 class="animate__animated animate__backInUp animate__faster">Profile</h1>
+            <p class="animate__animated animate__backInUp animate__faster animate__delay-1s">I'm a creative webdeveloper</p>
         </section>
         <section class="profil-details">
             <div class="details">
-                <h2>Details</h2>
-                <p><strong>Nama:</strong> <br> Anggita Salsa Sapta A.</p>
-                <p><strong>Umur:</strong> <br> 18 tahun</p>
-                <p><strong>Alamat:</strong> <br> Bulakan rt 02 rw 07, bulakan, Sukoharjo</p>
-                <p><strong>Asal Sekolah:</strong> <br> SMK VETERAN 1 SUKOHARJO</p>
+                <h2 class="animate__animated animate__fadeInLeft animate__faster animate__delay-1s">Details</h2>
+                <p class=" animate1 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Nama:</strong> <br> Anggita Salsa Sapta A.</p>
+                <p class=" animate2 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Umur:</strong> <br> 18 tahun</p>
+                <p class=" animate3 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Alamat:</strong> <br> Bulakan rt 02 rw 07, bulakan, Sukoharjo</p>
+                <p class=" animate4 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Asal Sekolah:</strong> <br> SMK VETERAN 1 SUKOHARJO</p>
                 <div class="social-media">
-                    <a href="#"><img src="aset/img/fb.png" alt="Facebook"></a>
-                    <a href="https://www.instagram.com/anggiiiee.ta?igsh=MWR6dzF2dzBsN214bQ=="><img src="aset/img/ig.png" alt="Instagram"></a>
-                    <a href="https://wa.me/+628812617329"><img src="aset/img/wa (4).png" alt="Whatsapp"></a>
-                    <a href="#"><img src="aset/img/yt.png" alt="Youtube"></a>
-                    <a href="#"><img src="aset/img/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="aset/img/tiktok.png" alt="TikTok"></a>
-                    <a href="#"><img src="aset/img/github.png" alt="Github"></a>
+                    <a class=" animate11 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/fb.png" alt="Facebook"></a>
+                    <a class=" animate10 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://www.instagram.com/anggiiiee.ta?igsh=MWR6dzF2dzBsN214bQ=="><img src="aset/img/ig.png" alt="Instagram"></a>
+                    <a class=" animate9 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://wa.me/+628812617329"><img src="aset/img/wa (4).png" alt="Whatsapp"></a>
+                    <a class=" animate8 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/yt.png" alt="Youtube"></a>
+                    <a class=" animate7 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/twitter.png" alt="Twitter"></a>
+                    <a class=" animate6 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/tiktok.png" alt="TikTok"></a>
+                    <a class=" animate5 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/github.png" alt="Github"></a>
                 </div>
             </div>
             <div class="about-me">
-                <h2>About me</h2>
-                <p>Saya seorang desainer grafis, animator, dan street fotografer yang selalu siap mengekspresikan kreativitas melalui karya visual yang menarik. Selain itu, saya juga gemar menulis konten yang informatif dan inspiratif untuk berbagai platform.</p>
-                <p><strong>Hobi:</strong> <br> Membaca, Menggambar, Main Game, Berpetualang, dan Menonton Anime</p>
-                <p><strong>Peran dalam Tim:</strong> <br> Content Writer</p>
+                <h2 class="animate__animated animate__fadeInLeft animate__faster animate__delay-1s">About me</h2>
+                <p class=" animate1 animate__animated animate__fadeInUp animate__faster animate__delay-2s">Saya seorang desainer grafis, animator, dan street fotografer yang selalu siap mengekspresikan kreativitas melalui karya visual yang menarik. Selain itu, saya juga gemar menulis konten yang informatif dan inspiratif untuk berbagai platform.</p>
+                <p class=" animate2 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Hobi:</strong> <br> Membaca, Berpetualang dan Menonton Anime</p>
+                <p class=" animate3 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Peran dalam Tim:</strong> <br> Content Writer</p>
             </div>
             <div class="profil-foto-container">
                 <img src="aset/img/anggita.jpg" alt="Anggita Salsa Sapta A." class="profil-foto">
