--- a/profil-JokoPurnomo.html
+++ b/profil-JokoPurnomo.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Joko Purnomo - MyDev Tani Berkah</title>
     <link rel="stylesheet" href="profil.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
-    <header>
+    <header class="animate__animated animate__fadeInDown">
         <nav>
             <a href="index.html#unit_kerja">Kembali ke Beranda</a>
         </nav>
@@ -15,31 +19,31 @@
 
     <main class="profil-container">
         <section class="profil-header">
-            <h1>Profile</h1>
-            <p>I'm a creative webdeveloper</p>
+            <h1 class="animate__animated animate__backInUp animate__faster">Profile</h1>
+            <p class="animate__animated animate__backInUp animate__faster animate__delay-1s">I'm a creative webdeveloper</p>
         </section>
         <section class="profil-details">
             <div class="details">
-                <h2>Details</h2>
-                <p><strong>Nama:</strong> <br> Joko Purnomo</p>
-                <p><strong>Umur:</strong> <br> 18 tahun</p>
-                <p><strong>Alamat:</strong> <br> Metuk, Mojosongo, Boyolali</p>
-                <p><strong>Asal Sekolah:</strong> <br> SMK Muhammadiyah 04 Boyolali</p>
+                <h2 class="animate__animated animate__fadeInLeft animate__faster animate__delay-1s">Details</h2>
+                <p class="animate1 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Nama:</strong> <br> Joko Purnomo</p>
+                <p class="animate2 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Umur:</strong> <br> 18 tahun</p>
+                <p class="animate3 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Alamat:</strong> <br> Metuk, Mojosongo, Boyolali</p>
+                <p class="animate4 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Asal Sekolah:</strong> <br> SMK Muhammadiyah 04 Boyolali</p>
                 <div class="social-media">
-                    <a href="#"><img src="aset/img/fb.png" alt="Facebook"></a>
-                    <a href="https://www.instagram.com/jkp_web/"><img src="aset/img/ig.png" alt="Instagram"></a>
-                    <a href="https://wa.me/62895321562121"><img src="aset/img/wa (4).png" alt="Whatsapp"></a>
-                    <a href="https://www.youtube.com/@JKP_com"><img src="aset/img/yt.png" alt="Youtube"></a>
-                    <a href="https://x.com/JKP5758"><img src="aset/img/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="aset/img/tiktok.png" alt="TikTok"></a>
-                    <a href="https://github.com/JKP5758"><img src="aset/img/github.png" alt="Github"></a>
+                    <a class="animate11 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/fb.png" alt="Facebook"></a>
+                    <a class="animate10 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://www.instagram.com/jkp_web/"><img src="aset/img/ig.png" alt="Instagram"></a>
+                    <a class="animate9 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://wa.me/62895321562121"><img src="aset/img/wa (4).png" alt="Whatsapp"></a>
+                    <a class="animate8 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://www.youtube.com/@JKP_com"><img src="aset/img/yt.png" alt="Youtube"></a>
+                    <a class="animate7 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://x.com/JKP5758"><img src="aset/img/twitter.png" alt="Twitter"></a>
+                    <a class="animate6 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="#"><img src="aset/img/tiktok.png" alt="TikTok"></a>
+                    <a class="animate5 animate__animated animate__fadeInLeft animate__faster animate__delay-2s" href="https://github.com/JKP5758"><img src="aset/img/github.png" alt="Github"></a>
                 </div>
             </div>
             <div class="about-me">
-                <h2>About me</h2>
-                <p>Saya adalah seorang pengembang web yang bersemangat dengan fokus pada pengalaman pengguna yang menarik dan responsif. Saya memiliki keahlian dalam HTML, CSS, PHP, SQL, dan JavaScript.</p>
-                <p><strong>Hobi:</strong> <br> Gaming, Coding, Fotografi</p>
-                <p><strong>Peran dalam Tim:</strong> <br> Frontend Developer</p>
+                <h2 class="animate__animated animate__fadeInLeft animate__faster animate__delay-1s">About me</h2>
+                <p class="animate1 animate__animated animate__fadeInUp animate__faster animate__delay-2s">Saya adalah seorang pengembang web yang bersemangat dengan fokus pada pengalaman pengguna yang menarik dan responsif. Saya memiliki keahlian dalam HTML, CSS, PHP, SQL, dan JavaScript.</p>
+                <p class="animate2 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Hobi:</strong> <br> Gaming, Coding, Fotografi</p>
+                <p class="animate3 animate__animated animate__fadeInUp animate__faster animate__delay-2s"><strong>Peran dalam Tim:</strong> <br> Frontend Developer</p>
             </div>
             <div class="profil-foto-container">
                 <img src="aset/img/joko.JPG" alt="Joko Purnomo" class="profil-foto">
